# marscalib

./: CMakeLists.txt  README.md
include/marscalib/: Rt.hpp  camera_center.hpp  lidar_center.hpp
include/sphere_calibration/: preprocess.hpp
marscalib/: CMakeLists.txt
marscalib/scripts/: vlp.py
marscalib/src/: camera_center.cpp  color_pcd.cpp  lidar_center.cpp  lidar_vlp.cpp  preprocess.cpp
scripts/: hough_only_object.py
sphere_calibration/: CMakeLists.txt  README.md
sphere_calibration/scripts/: amg.py  hough.py
sphere_calibration/src/: Rt.cpp  camera_center_user.cpp
src/: Rt.cpp  camera_center_user.cpp  lidar_center.cpp  preprocess.cpp
